--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "rm -r -f ./dist && tsc && vite build",
+    "build": "rm -r -f ./dist && vite build",
     "preview": "vite preview",
     "format": "npx @biomejs/biome format --write ./src",
     "test": "npx playwright test --project=chromium"
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@playwright/test": "^1.35.1",
+    "@webgpu/types": "^0.1.49",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1"
