--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "moduleDetection": "force",
     "noEmit": true,
 
+    "types": ["@webgpu/types"],
+    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
